--- a/style.css
+++ b/style.css
@@ -32,17 +32,19 @@ img{
   margin:20px;
 }
 #headline{
-  margin-top:20px;
   text-align: center;
+  display: block; 
+  height: auto;
+  margin: auto;
 }
 ul{
-  max-width:600px;
-  margin-left:40%;
-  text-align:justify;
+ max-width:600px;
+ margin: auto;
+ text-align: justify;
 }
 li{
-  margin: 10px;
-  margin-top: 15px;
+ margin: auto;
+ margin-top: 10px;
 }
 ol{
   margin-top: 20px;
